@@ -1,0 +1,21 @@
+# Copyright (C) 2005-2009 Anders Logg (logg@simula.no) and Harish Narayanan (harish@simula.no)
+# Licensed under the GNU GPL version 3 or any later version
+#
+# The bilinear form a(v, u) and Linear form L(v) for the Stokes
+# equations using a mixed formulation (Taylor-Hood elements) in
+# combination with the lhs() and rhs() operators to extract the
+# bilinear and linear forms from an expression F = 0.
+
+cell = triangle
+P2 = VectorElement("Lagrange", cell, 2)
+P1 = FiniteElement("Lagrange", cell, 1)
+TH = P2 + P1
+
+(v, q) = TestFunctions(TH)
+(u, p) = TrialFunctions(TH)
+
+f = Function(P2)
+
+F = (inner(grad(v), grad(u)) - div(v)*p + q*div(u))*dx - dot(v, f)*dx
+a = lhs(F)
+L = rhs(F)
