@@ -1,3 +1,4 @@
+ - Bug fix for lhs/rsh applied to mixed formulations
  - Add new log function set_prefix
  - Add new log function log(level, message)
 0.4.0 [2009-0?-??]
